# LearnBetter

./: .gitignore  build.ps1  build.sh  format.mL  index.html  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/anki/: mod.rs  shuffle.rs  sm2.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/parser/: ml.rs  mod.rs  standard.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/storage/: db.rs  mod.rs  stats.rs
src/api/: tauri.ts
src/api/__tests__/: tauri.test.ts
src/components/__tests__/: DeckBrowser.test.tsx  SettingsPage.test.tsx  StudyCard.test.tsx  SuccessScreen.test.tsx
src/components/deck/: DeckBrowser.tsx  ImportModal.tsx
src/components/settings/: SettingsPage.tsx
src/components/stats/: StatsScreen.tsx
src/components/study/: StudyCard.tsx  StudyView.tsx
src/components/success/: SuccessScreen.tsx
src/components/ui/: AppShell.tsx  ErrorBoundary.tsx  LoadingSpinner.tsx  Toast.tsx
src/store/: deckStore.ts  settingsStore.ts  statsStore.ts  studyStore.ts  toastStore.ts
src/store/__tests__/: deckStore.test.ts  settingsStore.test.ts  studyStore.test.ts
src/styles/: themes.css
src/types/: index.ts
tools/: converter.py  importer.py  run_tests.py  validate.py
tools/tests/: test_converter.py  test_validator.py
